--- a/AKELCO/scrape_AKELCO.ipynb
+++ b/AKELCO/scrape_AKELCO.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1681,6 +1681,462 @@
       ]
      },
      "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = tabula.read_pdf(\"AKECO.pdf\", stream = True, pages = 1)[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>Unnamed: 1</th>\n",
+       "      <th>(A)</th>\n",
+       "      <th>( B)</th>\n",
+       "      <th>( C)</th>\n",
+       "      <th>( D = B + C - PCR )</th>\n",
+       "      <th>[D/A]</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>other Cost</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>% to Total kWh</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Adjustments</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SOURCE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Basic Generation</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Total Generation</td>\n",
+       "      <td>Average</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Purchased</td>\n",
+       "      <td>kWh Purchased</td>\n",
+       "      <td>Cost</td>\n",
+       "      <td>(DAA, NSS, and Cost for the Month</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Generation Cost</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>other Billing</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>(PhP)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>(PhP)</td>\n",
+       "      <td>(PhP/kWh)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Adjustments)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>(PhP)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>NPC - PSALM</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>BILATERAL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>CONTRACT W/ IPPs</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>GCGI</td>\n",
+       "      <td>35.48%</td>\n",
+       "      <td>13,065,417</td>\n",
+       "      <td>80,353,622.41</td>\n",
+       "      <td>(1 ,285,657 Qu,</td>\n",
+       "      <td>79,067,964.45</td>\n",
+       "      <td>6 .0517</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>PPC</td>\n",
+       "      <td>0.53%</td>\n",
+       "      <td>196,500</td>\n",
+       "      <td>8,023,803.36</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>8,023,803.36</td>\n",
+       "      <td>40.8336</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>PEDC</td>\n",
+       "      <td>23.96%</td>\n",
+       "      <td>8,822,481</td>\n",
+       "      <td>75,072,252.09</td>\n",
+       "      <td>(255,642.41)</td>\n",
+       "      <td>74,816,609.69</td>\n",
+       "      <td>8.4802</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>IEMOP</td>\n",
+       "      <td>39.99%</td>\n",
+       "      <td>14,723,240</td>\n",
+       "      <td>107,233,239.35</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>107,233,239.35</td>\n",
+       "      <td>7.2833</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Net Metering</td>\n",
+       "      <td>0.04%</td>\n",
+       "      <td>13,708</td>\n",
+       "      <td>109,767.07</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>109,767.07</td>\n",
+       "      <td>8.0077</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Less: Pilferage Cost</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>(86,557.32)</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Recoveries (PCR)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>SELF-GENERATION</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>SALE FOR RESALE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>BOE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>37,276,976</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>SSLA</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1,040,996</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>EMBEDDED GEN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>196,500</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>NET METERING</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>13,708</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>MINUS: CONTESTABLE CUSTOMER</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1,706,834</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>SUB-TOTAL</td>\n",
+       "      <td>100.00%</td>\n",
+       "      <td>36,821,346</td>\n",
+       "      <td>270,792,684.28</td>\n",
+       "      <td>(1,541,300.~)</td>\n",
+       "      <td>269,164,826.60</td>\n",
+       "      <td>7.3100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>Other Generation Rate</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>Adjustment (OGA)</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>TOTAL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7.3100</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Unnamed: 0      Unnamed: 1            (A)  \\\n",
+       "0                           NaN             NaN            NaN   \n",
+       "1                           NaN  % to Total kWh            NaN   \n",
+       "2                        SOURCE             NaN            NaN   \n",
+       "3                           NaN       Purchased  kWh Purchased   \n",
+       "4                           NaN             NaN            NaN   \n",
+       "5                           NaN             NaN            NaN   \n",
+       "6                           NaN             NaN            NaN   \n",
+       "7                           NaN             NaN            NaN   \n",
+       "8                   NPC - PSALM             NaN            NaN   \n",
+       "9                     BILATERAL             NaN            NaN   \n",
+       "10             CONTRACT W/ IPPs             NaN            NaN   \n",
+       "11                         GCGI          35.48%     13,065,417   \n",
+       "12                          PPC           0.53%        196,500   \n",
+       "13                         PEDC          23.96%      8,822,481   \n",
+       "14                        IEMOP          39.99%     14,723,240   \n",
+       "15                 Net Metering           0.04%         13,708   \n",
+       "16         Less: Pilferage Cost             NaN            NaN   \n",
+       "17                          NaN             NaN            NaN   \n",
+       "18             Recoveries (PCR)             NaN            NaN   \n",
+       "19              SELF-GENERATION             NaN            NaN   \n",
+       "20              SALE FOR RESALE             NaN            NaN   \n",
+       "21                          BOE             NaN     37,276,976   \n",
+       "22                         SSLA             NaN      1,040,996   \n",
+       "23                 EMBEDDED GEN             NaN        196,500   \n",
+       "24                 NET METERING             NaN         13,708   \n",
+       "25  MINUS: CONTESTABLE CUSTOMER             NaN      1,706,834   \n",
+       "26                    SUB-TOTAL         100.00%     36,821,346   \n",
+       "27        Other Generation Rate             NaN            NaN   \n",
+       "28             Adjustment (OGA)             NaN            NaN   \n",
+       "29                        TOTAL             NaN            NaN   \n",
+       "\n",
+       "                ( B)                               ( C) ( D = B + C - PCR )  \\\n",
+       "0                NaN                         other Cost                 NaN   \n",
+       "1                NaN                        Adjustments                 NaN   \n",
+       "2   Basic Generation                                NaN    Total Generation   \n",
+       "3               Cost  (DAA, NSS, and Cost for the Month                 NaN   \n",
+       "4                NaN                      other Billing                 NaN   \n",
+       "5              (PhP)                                NaN               (PhP)   \n",
+       "6                NaN                       Adjustments)                 NaN   \n",
+       "7                NaN                              (PhP)                 NaN   \n",
+       "8                NaN                                NaN                 NaN   \n",
+       "9                NaN                                NaN                 NaN   \n",
+       "10               NaN                                NaN                 NaN   \n",
+       "11     80,353,622.41                    (1 ,285,657 Qu,       79,067,964.45   \n",
+       "12      8,023,803.36                                NaN        8,023,803.36   \n",
+       "13     75,072,252.09                       (255,642.41)       74,816,609.69   \n",
+       "14    107,233,239.35                                NaN      107,233,239.35   \n",
+       "15        109,767.07                                NaN          109,767.07   \n",
+       "16               NaN                                NaN                 NaN   \n",
+       "17               NaN                                NaN         (86,557.32)   \n",
+       "18               NaN                                NaN                 NaN   \n",
+       "19               NaN                                NaN                 NaN   \n",
+       "20               NaN                                NaN                 NaN   \n",
+       "21               NaN                                NaN                 NaN   \n",
+       "22               NaN                                NaN                 NaN   \n",
+       "23               NaN                                NaN                 NaN   \n",
+       "24               NaN                                NaN                 NaN   \n",
+       "25               NaN                                NaN                 NaN   \n",
+       "26    270,792,684.28                      (1,541,300.~)      269,164,826.60   \n",
+       "27               NaN                                NaN                 NaN   \n",
+       "28               NaN                                NaN                 NaN   \n",
+       "29               NaN                                NaN                 NaN   \n",
+       "\n",
+       "              [D/A]  \n",
+       "0               NaN  \n",
+       "1               NaN  \n",
+       "2           Average  \n",
+       "3   Generation Cost  \n",
+       "4               NaN  \n",
+       "5         (PhP/kWh)  \n",
+       "6               NaN  \n",
+       "7               NaN  \n",
+       "8               NaN  \n",
+       "9               NaN  \n",
+       "10              NaN  \n",
+       "11          6 .0517  \n",
+       "12          40.8336  \n",
+       "13           8.4802  \n",
+       "14           7.2833  \n",
+       "15           8.0077  \n",
+       "16              NaN  \n",
+       "17              NaN  \n",
+       "18              NaN  \n",
+       "19              NaN  \n",
+       "20              NaN  \n",
+       "21              NaN  \n",
+       "22              NaN  \n",
+       "23              NaN  \n",
+       "24              NaN  \n",
+       "25              NaN  \n",
+       "26           7.3100  \n",
+       "27              NaN  \n",
+       "28              NaN  \n",
+       "29           7.3100  "
+      ]
+     },
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
